<resources>
    <string name="app_name">NavigationPractice</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Rent_a_boat">Rent a Boat</string>
    <string name="Login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
</resources>