<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <View
        android:id="@+id/vBoat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_directions_boat_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvRentABoat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Rent_a_boat"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#5459FD"
        app:layout_constraintTop_toBottomOf="@id/vBoat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRentABoat"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        android:hint="@string/email"
        />
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/edEmail"
        app:layout_constraintEnd_toEndOf="@id/edEmail"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        android:hint="@string/password"
        />
    <Button
        android:id="@+id/btSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/edPassword"
        app:layout_constraintEnd_toEndOf="@id/edPassword"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        android:text="@string/Login"
        android:textAllCaps="false"
        />
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#5459FD"
        app:layout_constraintTop_toBottomOf="@id/btSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>